[tool.poetry]
name = "spotify2yt"
version = "0.1.0"
description = ""
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.22.1"
flask = "^2.2.3"
requests = "^2.28.2"
selectolax = "^0.3.12"
ytmusicapi = "^0.25.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
